--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1222,8 +1222,27 @@ config TOUCHSCREEN_SYNAPTICS_DSX
         help
           Say Y here if you have a Synaptics Touchscreen.
 
+config FT5XX_TGESTURE_FUNCTION
+	bool "syna tgesture function"
+	default n
+	help
+	  Say Y here if you use syna TP gesture function.
+
           If unsure, say N.
 
 source "drivers/input/touchscreen/synaptics_dsx/Kconfig"
+
+config TOUCHSCREEN_FT5XX
+       tristate "FocalTech touchscreens"
+       depends on I2C
+       help
+         Say Y here if you have a ft5XX touchscreen.
+	 Ft5xx controllers are multi touch controllers which can
+	 report 5 touches at a time.
+
+         If unsure, say N.
+
+         To compile this driver as a module, choose M here: the
+         module will be called ft5xx_ts.
 
 endif
