TouchScreen: Import Tinno's Gestures Driver
Signed-off-by: Shoaib Anwar <Shoaib0595@gmail.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1222,6 +1222,14 @@ config TOUCHSCREEN_SYNAPTICS_DSX
         help
           Say Y here if you have a Synaptics Touchscreen.
 
+config TP_TGESTURE
+	bool "TP gesture"
+	default n
+	help
+	  Say Y here if you use TP gesture function.
+
+          If unsure, say N.
+
 config FT5XX_TGESTURE_FUNCTION
 	bool "syna tgesture function"
 	default n
