Device-Tree: Add Yu Yureka Black (Garlic/P-7201) Files
For reference:
https://github.com/h2o64/android_kernel_yu_msm8937/commit/35dd858b9b86285e7985f5917ddb559fed4d7b12

Signed-off-by: Shoaib0597 <Shoaib0595@gmail.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1232,3 +1232,8 @@ source "arch/arm64/crypto/Kconfig"
 endif
 
 source "lib/Kconfig"
+
+config PROJECT_GARLIC
+	tristate "Project_Garlic"
+	help
+	  This option allows building for a Target Device. In this case, it is Garlic.
