--- a/arch/arm64/boot/dts/qcom/msm8937-audio.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-audio.dtsi
@@ -50,9 +50,11 @@
 
 		qcom,msm-ext-pa = "primary";
 		qcom,msm-mclk-freq = <9600000>;
-		qcom,msm-mbhc-hphl-swh = <0>;
+		qcom,msm-mbhc-hphl-swh = <1>;
 		qcom,msm-mbhc-gnd-swh = <0>;
-		qcom,msm-hs-micbias-type = "external";
+		qcom,msm-hs-micbias-type = "internal";
+		qcom,msm-spk-ext-pa = <&tlmm 126 0>;
+		qcom,msm-spk-ext-pa-compatible = <&tlmm 89 0>;
 		qcom,msm-micbias1-ext-cap;
 
 		qcom,audio-routing =
