--- a/arch/arm64/boot/dts/qcom/msm8937-pmi8950-mtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-pmi8950-mtp.dtsi
@@ -16,14 +16,18 @@
 
 &vendor {
 	mtp_batterydata: qcom,battery-data {
-		qcom,batt-id-range-pct = <15>;
-		#include "batterydata-itech-3000mah.dtsi"
-		#include "batterydata-ascent-3450mAh.dtsi"
+		qcom,batt-id-range-pct = <100>; 
+		#include "batterydata-tinno-3000mah-4400mv.dtsi"
 	};
 };
 
 &qpnp_fg {
 	qcom,battery-data = <&mtp_batterydata>;
+	qcom,cold-bat-decidegc = <(0)>;
+	qcom,cool-bat-decidegc = <(100)>;
+	qcom,hot-bat-decidegc  = <600>;
+	qcom,warm-bat-decidegc = <450>;
+	qcom,bad-battery-detection-enable;
 };
 
 &qpnp_smbcharger {
