Def-Config: Disable "Goodix-FP" for Now
Note:
I am not able to fix the following error:

CC      drivers/input/fingerprint/goodix_qsee/gf_spi.o
/home/shoaib0597/Android/CAF-MSM_4.9/drivers/input/fingerprint/goodix_qsee/gf_spi.c:925:2: error: unknown field 'suspend' specified in initializer
  .suspend = gf_suspend,
  ^
/home/shoaib0597/Android/CAF-MSM_4.9/drivers/input/fingerprint/goodix_qsee/gf_spi.c:925:2: warning: initialization from incompatible pointer type
error, forbidden warning: gf_spi.c:925
/home/shoaib0597/Android/CAF-MSM_4.9/scripts/Makefile.build:298: recipe for target 'drivers/input/fingerprint/goodix_qsee/gf_spi.o' failed
make[5]: *** [drivers/input/fingerprint/goodix_qsee/gf_spi.o] Error 1
/home/shoaib0597/Android/CAF-MSM_4.9/scripts/Makefile.build:549: recipe for target 'drivers/input/fingerprint/goodix_qsee' failed
make[4]: *** [drivers/input/fingerprint/goodix_qsee] Error 2
/home/shoaib0597/Android/CAF-MSM_4.9/scripts/Makefile.build:549: recipe for target 'drivers/input/fingerprint' failed
make[3]: *** [drivers/input/fingerprint] Error 2
/home/shoaib0597/Android/CAF-MSM_4.9/scripts/Makefile.build:549: recipe for target 'drivers/input' failed
make[2]: *** [drivers/input] Error 2
/home/shoaib0597/Android/CAF-MSM_4.9/Makefile:999: recipe for target 'drivers' failed
make[1]: *** [drivers] Error 2
make[1]: Leaving directory '/home/shoaib0597/Android/out'
Makefile:150: recipe for target 'sub-make' failed
make: *** [sub-make] Error 2

Signed-off-by: Shoaib0597 <Shoaib0595@gmail.com>

--- a/arch/arm64/configs/lineage_garlic_defconfig
+++ b/arch/arm64/configs/lineage_garlic_defconfig
@@ -1794,7 +1794,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_RMI4_CORE is not set
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_ELAN_QSEE=y
-CONFIG_FINGERPRINT_GOODIX_QSEE=y
+# CONFIG_FINGERPRINT_GOODIX_QSEE is not set
 
 #
 # Hardware I/O ports
