--- a/arch/arm64/boot/dts/qcom/msm8937-mtp.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937-mtp.dtsi
@@ -156,6 +156,11 @@
 	};
 };
 
+&flash_led {
+	qcom,front_flash_gpio_mode=<&tlmm 12 0x00>;
+	qcom,front_flash_gpio_en=<&tlmm 13 0x00>;
+};
+
 &spi_6 {
     	qcom_fp@0 {
         	status = "ok";
